--- a/Resources/Textures/Voidkol/Tiles/attributions.yml
+++ b/Resources/Textures/Voidkol/Tiles/attributions.yml
@@ -1,4 +1,3 @@
 - files: ["alien.png"]
-  license: "CC0-1.0"
-  copyright: "Created by EmoGarbage404 (github) for space-station-14."
-  source: "https://github.com/space-wizards/space-station-14/pull/13766"
+  license: "CC-BY-SA-3.0"
+  copyright: "Lyutsikkk - Voidkol"
