--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -759,6 +759,7 @@
     idleState: icon
     runningState: icon
     staticRecipes:
+      - MilitaryTechFabCircuitboard
       - BoxLethalshot
       - BoxShotgunFlare
       - BoxShotgunPractice
