--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -880,3 +880,12 @@
   completetime: 6
   materials:
     Steel: 300
+
+- type: latheRecipe
+  id: MilitaryTechFabCircuitboard
+  result: MilitaryTechFabCircuitboard
+  completetime: 15
+  materials:
+     Steel: 500
+     Glass: 500
+     Gold: 100
