--- a/Resources/Prototypes/Voidkol/Entities/Clothing/Back/backpacks.yml
+++ b/Resources/Prototypes/Voidkol/Entities/Clothing/Back/backpacks.yml
@@ -3,7 +3,7 @@
   id: ClothingBackpackMilitaryFlora
   suffix: Voidkol
   name: военный рюкзак
-  description: Военный рюкзак предназначенный для ВКФ Voidkol.
+  description: Рюкзак предназначенный для ВКФ.
   components:
     - type: Sprite
       sprite: Voidkol/Clothing/Back/Backpacks/backpacks_military_flora.rsi
@@ -13,7 +13,7 @@
   id: ClothingBackpackMilitaryGvard
   suffix: Voidkol
   name: военный рюкзак
-  description: Военный рюкзак предназначенный для ВКФ Voidkol.
+  description: Рюкзак предназначенный для ВКФ.
   components:
     - type: Sprite
       sprite: Voidkol/Clothing/Back/Backpacks/backpacks_military_gvard.rsi
@@ -23,7 +23,7 @@
   id: ClothingBackpackMilitaryHaki
   suffix: Voidkol
   name: военный рюкзак
-  description: Военный рюкзак предназначенный для ВКФ Voidkol.
+  description: Рюкзак предназначенный для ВКФ.
   components:
     - type: Sprite
       sprite: Voidkol/Clothing/Back/Backpacks/backpacks_military_haki.rsi
@@ -33,7 +33,7 @@
   id: ClothingBackpackMilitarySneg
   suffix: Voidkol
   name: военный рюкзак
-  description: Военный рюкзак предназначенный для ВКФ Voidkol.
+  description: Рюкзак предназначенный для ВКФ.
   components:
     - type: Sprite
       sprite: Voidkol/Clothing/Back/Backpacks/backpacks_military_sneg.rsi
