--- a/Resources/Prototypes/Voidkol/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/Voidkol/Entities/Clothing/Head/hats.yml
@@ -2,7 +2,7 @@
   parent: ClothingHeadBase
   id: ClothingHeadHatBeretKrapovy
   suffix: Voidkol
-  name: Краповый берет
+  name: краповый берет
   description: Для тех, кто доказал свою профессиональность.
   components:
   - type: Sprite
