--- a/Resources/Prototypes/Voidkol/Entities/Clothing/Head/helmets.yml
+++ b/Resources/Prototypes/Voidkol/Entities/Clothing/Head/helmets.yml
@@ -3,7 +3,7 @@
   id: ClothingHeadHelmetMilitaryFlora
   suffix: Voidkol
   name: военный шлем
-  description: Военный шлем предназначенный для ВКФ Voidkol.
+  description: Военный шлем предназначенный для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/Head/Helmets/helmet_military_flora.rsi
@@ -22,7 +22,7 @@
   id: ClothingHeadHelmetMilitaryGvard
   suffix: Voidkol
   name: военный шлем
-  description: Военный шлем предназначенный для ВКФ Voidkol.
+  description: Военный шлем предназначенный для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/Head/Helmets/helmet_military_gvard.rsi
@@ -41,7 +41,7 @@
   id: ClothingHeadHelmetMilitaryHaki
   suffix: Voidkol
   name: военный шлем
-  description: Военный шлем предназначенный для ВКФ Voidkol.
+  description: Военный шлем предназначенный для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/Head/Helmets/helmet_military_haki.rsi
@@ -60,7 +60,7 @@
   id: ClothingHeadHelmetMilitarySneg
   suffix: Voidkol
   name: военный шлем
-  description: Военный шлем предназначенный для ВКФ Voidkol.
+  description: Военный шлем предназначенный для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/Head/Helmets/helmet_military_sneg.rsi
