--- a/Resources/Prototypes/Voidkol/Entities/Clothing/OuterClothing/vesrs.yml
+++ b/Resources/Prototypes/Voidkol/Entities/Clothing/OuterClothing/vesrs.yml
@@ -2,7 +2,7 @@
   parent: ClothingOuterVestWeb
   id: ClothingOuterVestWebMilitaryFlora
   name: военная бронеразгрузка
-  description:
+  description: Бронеразгрузка предназначенная для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/OuterClothing/Vests/armored_unloading_military_flora.rsi
@@ -22,7 +22,7 @@
   parent: ClothingOuterVestWeb
   id: ClothingOuterVestWebMilitaryGvard
   name: военная бронеразгрузка
-  description:
+  description: Бронеразгрузка предназначенная для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/OuterClothing/Vests/armored_unloading_military_gvard.rsi
@@ -42,7 +42,7 @@
   parent: ClothingOuterVestWeb
   id: ClothingOuterVestWebMilitaryHaki
   name: военная бронеразгрузка
-  description:
+  description: Бронеразгрузка предназначенная для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/OuterClothing/Vests/armored_unloading_military_haki.rsi
@@ -61,7 +61,7 @@
   parent: ClothingOuterVestWeb
   id: ClothingOuterVestWebMilitarySneg
   name: военная бронеразгрузка
-  description:
+  description: Бронеразгрузка предназначенная для ВКФ.
   components:
   - type: Sprite
     sprite: Voidkol/Clothing/OuterClothing/Vests/armored_unloading_military_sneg.rsi
