--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -64,7 +64,10 @@
     soundHit:
       path: /Audio/Weapons/Guns/Hits/bullet_hit.ogg
   - type: TimedDespawn
-    lifetime: 10
+    lifetime: 20
+  - type: EmitSoundOnSpawn
+    sound:
+      path: /Audio/Voidkol/Weapons/Guns/Ammunition/svist.ogg
 
 - type: entity
   id: BaseBulletTrigger # Trigger-on-collide bullets
