--- a/Resources/Prototypes/Voidkol/Entities/Clothing/Neck/misc.yml
+++ b/Resources/Prototypes/Voidkol/Entities/Clothing/Neck/misc.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: ClothingNeckBase
   id: ClothingNeckBattleToken
+  suffix: Voidkol
   name: жетон ВКФ
   description: Жетон для всех бойцов ВКФ.
   components:
