--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,3 +1,3 @@
-defaultWindowTitle: Einstein Engines
+defaultWindowTitle: Voidkol Сorporation
 windowIconSet: /Textures/Logo/icon
 splashLogo: /Textures/Logo/splashlogo.png
